<resources>
    <string name="app_name">千禧之星</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="guide_button_text">立即体验</string>
    <string name="filtrate">筛选</string>
    <string name="more_classify">更多分类</string>
    <string name="classify">分类</string>
    <string name="home">首页</string>
    <string name="custom">定制</string>
    <string name="me">我的</string>
    <string name="more">更多</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="no_network">网络未连接</string>
    <string name="index_search_edit_hint">请输入</string>
    <string-array name="jazzy_effects">

        <item>Standard</item>

        <item>Tablet</item>

        <item>CubeIn</item>

        <item>CubeOut</item>

        <item>FlipVertical</item>

        <item>FlipHorizontal</item>

        <item>Stack</item>

        <item>ZoomIn</item>

        <item>ZoomOut</item>

        <item>RotateUp</item>

        <item>RotateDown</item>

        <item>Accordion</item>

    </string-array>
    <string-array name="product_details_tab_menu">

        <item>图文详情</item>

        <item>商品参数</item>

    </string-array>
    <string-array name="comment_group">

        <item>好评</item>
        <item>中评</item>
        <item>差评</item>

    </string-array>
    <string-array name="goods_managment">

        <item>全部</item>

        <item>待付款</item>

        <item>待发货</item>

        <item>待收货</item>

        <item>待取货</item>

    </string-array>
    <string name="reduction_ticket_activity_name">我的优惠券</string>
    <string name="welcome_qianxi">欢迎来到千禧之星</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="free_shipping">免运费</string>
    <string name="official_price">国庆促销</string>
    <string name="renminbi">¥</string>
    <string name="product_details">商品详情</string>
    <string name="no_norms">该商品无其他规格</string>
    <string name="norm">规格：</string>
    <string name="goods_comment">商品评价</string>
    <string name="select_norms">选择规格</string>
    <string name="service_phone_number">4009269199</string>
    <string name="search">搜索</string>
    <string name="please_input">&#160;请输入</string>
    <string name="clear_all">清除历史记录</string>
    <string name="history_search">历史搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="current_location">当前位置：</string>
    <string name="locationing">正在定位，请稍等...</string>
    <string name="near_store">附近门店</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan_add_device">扫描添加设备</string>
    <string name="scan_fail">扫描失败</string>
    <string name="bearing">方位</string>
    <string name="line_distence">直线距离</string>
    <string name="set">设置</string>
    <string name="about">关于我们</string>
    <string name="help">使用帮助</string>
    <string name="share">软件分享</string>
    <string name="feedback">意见反馈</string>
    <string name="updata">软件更新</string>
    <string name="news">最新资讯</string>
    <string name="jewelry_knowledge">珠宝知识</string>
    <string name="application">精品应用</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="news_product">新品</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="recent_updates">最近更新:</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_refreshing_label">刷新中\u2026</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="data_loaded">加载完成</string>
    <string name="line_plan">线路规划</string>
    <string name="line_navigation">直线导航</string>
    <string name="bear_value">0.0</string>
    <string name="bear_unit">D</string>
    <string name="distence_value">0.00</string>
    <string name="distence_unit">km</string>
    <string name="select_commodity">选择商品</string>
    <string name="please_select_norms">请选择规格</string>
    <string name="number">数量</string>
    <string name="stock">库存</string>
    <string name="piece">件</string>
    <string name="add_receives_an_address">添加收件地址</string>
    <string name="recevier">收件人:</string>
    <string name="phone">电话:</string>
    <string name="recevier_address">收件地址:</string>
    <string name="select_distribution_mode">配送方式</string>
    <string name="select_pay_mode">支付方式</string>
    <string name="get_in_shop_mode">到店自取</string>
    <string name="not_select_address">无</string>
    <string name="online_pay">在线支付</string>
    <string name="pay_on_delivery">货到付款</string>
    <string name="confirm_indent">确认订单</string>
    <string name="buy_number">购买数量</string>
    <string name="total_price">合计:</string>
    <string name="confirm">确认</string>
    <string name="indent_post_successed">订单提交成功</string>
    <string name="unionpay_pay">银联支付</string>
    <string name="zhifubao_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="in_shop_pay">到店支付</string>
    <string name="caifutong_pay">财付通支付</string>
    <string name="pos_pay">POS机支付</string>
    <string name="confirm_pay">确认支付</string>
    <string name="pay">支付</string>
    <string name="pay_tips">*请您及时付款,以便订单尽快处理！在线支付金额:</string>
    <string name="manage_address">管理收货地址</string>
    <string name="receiver_address">收货地址</string>
    <string name="create_receiver_address">新建收货地址</string>
    <string name="select_address">选择地址</string>
    <string name="name">姓名:</string>
    <string name="shop_name">店铺名称:</string>
    <string name="phone_number">手机号：</string>
    <string name="current_address">所在地区:</string>
    <string name="detail_address">详细地址:</string>
    <string name="zip_code">邮政编码:</string>
    <string name="save_set">保存设置</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="seting">设置中...</string>
    <string name="deleteing">删除中...</string>
    <string name="address">地址:</string>
    <string name="default_address">默认地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="delete">删除</string>
    <string name="already_default_address">已是默认地址</string>
    <string name="defalut">默认</string>
    <string name="reset">重置</string>
    <string name="logistics_label">物流首页</string>
    <string name="logistics_company">物流公司:</string>
    <string name="waybill_number">运单单号:</string>
    <string name="Order_time">下单时间:</string>
    <string name="indent_details">订单详情</string>
    <string name="cancel_indent">取消订单</string>
    <string name="delete_indent">删除订单</string>
    <string name="application_returns">申请退货</string>
    <string name="pay_now">立即支付</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="comment_goods">商品评价</string>
    <string name="purchase_again">再次购买</string>
    <string name="contact_customer_cervice">联系客服</string>
    <string name="payment">支付方式</string>
    <string name="distribution_mode">配送方式</string>
    <string name="applyforre_fund">申请退款</string>
    <string name="new_password">新密码：</string>
    <string name="confrim_password">再次确认：</string>
    <string name="confrim_change">确认修改</string>
    <string name="new_password_tips">请输入5-20位密码</string>
    <string name="confrim_change_password_tips">请再次输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="next_step">下一步</string>
    <string name="reset_password">重置密码</string>
    <string name="user_picture">用户头像</string>
    <string name="account_no">账号:</string>
    <string name="username_ed_hint">"用户名 / 手机号码 / 邮箱</string>
    <string name="password">密码:</string>
    <string name="forgetpassword">忘记密码？</string>
<string name="no_account_registernow">

    <![CDATA[没有账户？ 立即注册 >>]]>

</string>
    <string name="thirdpartlogin">用第三方账号登录</string>
    <string name="username">用户名：</string>
    <string name="register_username_hint2">请输入用户名</string>
    <string name="phonenumber">手机号：</string>
    <string name="register_phonenumber_hint">请输入手机号码</string>
    <string name="register_tv_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="register_password_hint">请输入5-20位的密码</string>
    <string name="no_account_loginnow">已有账号？马上登录 >></string>
    <string name="all_receipts">所有订单</string>
    <string name="all_receipt">查看所有订单</string>
    <string name="auth_code">验证码：</string>
    <string name="auth_code_hint">请输入验证码</string>
    <string name="auth_code_get">获取验证码</string>
    <string name="tv_register_username">用户名:</string>
    <string name="register_username_hint">请输入6-20位的账号名</string>
    <string name="phone_number_format_error">号码格式不对</string>
    <string name="register_data_send_success">号码发送成功~开始对比</string>
    <string name="register_error">注册消息不对。请检查再试</string>
    <string name="user_less_size">用户名大于六位</string>
    <string name="password_less_size">密码大于六位</string>
    <string name="pass_user_same">密码不能和用户名一致</string>
    <string name="yanzhengma_wrong">验证码不对</string>
    <string name="R.string.number_format_wrong">号码格式不对</string>
    <string name="title_activity_self_information">SelfInformationActivity</string>
    <string name="myselfinfo_bluelink">如何升级?</string>
    <string name="client_rank">会员等级</string>
    <string name="client_point">现有积分</string>
    <string name="client_name">用户名</string>
    <string name="client_nickname">昵称</string>
    <string name="client_mailadress">邮箱</string>
    <string name="client_gender">性别</string>
    <string name="client_adress_manager">地址管理</string>
    <string name="change_password">修改密码</string>
    <string name="modify_self_data">修改资料</string>
    <string name="login_wrong">登录有错误</string>
    <string-array name="selfinfo">

        <item>用户名</item>

        <item>昵称</item>

        <item>邮箱</item>

        <item>性别</item>

    </string-array>
    <string-array name="self_menu_hints">

        <item>钻石会员</item>

        <item>99999</item>

        <item>13060552637</item>

        <item>林佳明</item>

        <item>ulrichabiguime@qq.com</item>

        <item>男</item>

        <item />

        <item />

    </string-array>
    <string-array name="self_menu_blue_link">

        <item>如何升级？</item>

        <item>如何记录？</item>

        <item />

        <item />

        <item />

        <item />

        <item />

        <item />
        <item />

    </string-array>
    <string-array name="goods_managment_1">

        <item>待付款</item>

        <item>待发货</item>

        <item>待收货</item>

        <item>退换货</item>

    </string-array>
    <string name="waitingforpay">待付款</string>
    <string name="waitingforsending">待发货</string>
    <string name="waitingforreceiving">待收货</string>
    <string name="waitingforretrieve">待取货</string>
    <string name="myself">我的</string>
    <string name="allthegoods">所有订单</string>
    <string name="everyday_attendance">每日签到</string>
    <string name="favorites">我的收藏</string>
    <string name="change_gift">礼品脱欢</string>
    <string name="reductions">我的优惠券</string>
    <string name="myshoppingcar">购物车</string>
    <string name="allthegoods_hint">查看所有已购订单</string>
    <string name="logistics_detail_company_name">物流公司：</string>
    <string name="logistics_detail_bill_number">运单编号：</string>
    <string name="logistics_detail_order_time">下单时间：</string>
    <string name="coupon_all">全部</string>
    <string name="coupon_no_use">未使用</string>
    <string name="coupon_used">已使用</string>
    <string name="coupon_out_of_date">已过期</string>
    <string name="get_in_shop_contact_num">联系电话: &#160;&#160;</string>
    <string name="get_in_shop_business_hours">营业时间: &#160;&#160;</string>
    <string name="get_in_shop_inventory">商品库存: &#160;&#160;</string>
    <string name="get_in_shop_address">地址：&#160;&#160;</string>
</resources>