<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:descendantFocusability="blocksDescendants"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <RadioButton
        android:id="@+id/single_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:button="@drawable/custom_checkedbox_design_all"
        android:checked="false"
        android:clickable="false"
        android:focusable="false" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/picture" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="商店名"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/contact_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_in_shop_contact_num"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/business_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_in_shop_business_hours"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_in_shop_inventory"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_in_shop_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>