<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/reciever_address_layout"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/enter_manager_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_expand_pressed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/enter_manager_address"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:baselineAligned="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recevier"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small_medium" />

                    <TextView
                        android:id="@+id/receiver_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small_medium" />

                    <TextView
                        android:id="@+id/receiver_phone_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small_medium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/recevier_address"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/receives_an_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/add_address_layout"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_receives_an_address" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/get_in_shop"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_in_shop_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small_medium" />

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/btn_expand_pressed"
            android:text="@string/not_select_address"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/distribution_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/select_distribution_mode"
            android:textSize="@dimen/text_size_small_medium" />

        <TextView
            android:id="@+id/select_send_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/icon_confirmorder_return2"
            android:text="@string/online_pay"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pay_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="1dip"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/select_pay_mode"
            android:textSize="@dimen/text_size_small_medium" />

        <TextView
            android:id="@+id/select_pay_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/icon_confirmorder_return2"
            android:text="@string/online_pay"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>
</LinearLayout>