<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logistics_detail_company_name"
                android:textColor="@color/color_light_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="顺丰速递"
                android:textColor="@color/color_black_st"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logistics_detail_bill_number"
                android:textColor="@color/color_light_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="175682437721"
                android:textColor="@color/color_black_st"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logistics_detail_order_time"
                android:textColor="@color/color_light_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015-07-16  16:52:36"
                android:textColor="@color/color_black_st"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:scrollbars="none"
        android:padding="20dp"/>

</LinearLayout>