<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup android:id="@+id/coupon_btn_group"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/coupon_btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/search_radiobutton_bg"
                android:text="@string/coupon_all" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_detach_line" />

            <RadioButton android:id="@+id/coupon_btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/search_radiobutton_bg"
                android:text="@string/coupon_no_use" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_detach_line" />

            <RadioButton android:id="@+id/coupon_btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/search_radiobutton_bg"
                android:text="@string/coupon_used" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_detach_line" />

            <RadioButton android:id="@+id/coupon_btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/search_radiobutton_bg"
                android:text="@string/coupon_out_of_date" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <ListView android:id="@+id/coupon_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:divider="@null"
                android:scrollbars="none" />

            <include
                layout="@layout/loading_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                layout="@layout/no_result_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                layout="@layout/network_error_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>